--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,15 +6,14 @@
   <body class="container">
     <header><%- include('../partials/header'); %></header>
 
-    <main>
-      <div class="text-center">
+      <div class="text-center py-4">
         <p class="fs-3">Hello, Welcome to my Website</p>
-        <p class="fs-1">
+        <p class="fs-2">
           I offer a unique web design experience, by providing the best in my
           Portfolio.
         </p>
+        <a class="btn btn-primary" href="/project">Check out my Project!</a>
       </div>
-    </main>
 
     <footer><%- include('../partials/footer'); %></footer>
   </body>
