--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,18 +3,45 @@
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body class="container">
+  <body class="container mx-auto">
     <header><%- include('../partials/header'); %></header>
 
-      <div class="text-center py-4">
-        <p class="fs-3">Hello, Welcome to my Website</p>
-        <p class="fs-2">
-          I offer a unique web design experience, by providing the best in my
-          Portfolio.
-        </p>
-        <a class="btn btn-primary" href="/project">Check out my Project!</a>
-      </div>
+    <div class="container mx-auto text-center md:p-20 m-20">
+      <p class="text-3xl pb-4">Hello I'm</p>
+      <p class="text-3xl pb-4">Edmund Tang</p>
+      <div class=" typewriter">
 
+        <p class="text-2xl pb-4">Outstanding Or Out</p>
+      </div>
+      <ul class="flex gap-6 justify-center p-4 text-5xl">
+        <li>
+          <a class="" href="https://github.com/EdmundLT">
+            <i class="hover:bg-green-500 fa-brands fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a class="" href="https://www.linkedin.com/in/longtang21/">
+            <i class="hover:bg-green-500 fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a class="" href="https://twitter.com/EdmundTL0921">
+            <i class="hover:bg-green-500 fa-brands fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a class="" href="https://www.instagram.com/edmund_tangca/">
+            <i class="hover:bg-green-500 fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a class="" href="https://edmundlt.tech/youtube">
+            <i class="hover:bg-green-500 fa-brands fa-youtube"></i>
+          </a>
+        </li>
+      </ul>
+      <p class="text-2xl py-10">A Software Enginner, Web Application nerd who focus on develop himself.</p>
+      </div>
     <footer><%- include('../partials/footer'); %></footer>
   </body>
 </html>
