--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
-<div>
-  <p class="text-center text-muted bg-light py-2">
-    &copy; Copyright 2022 Long Tang - COMP229 Assignment 1
+<div class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 backdrop-filter bg-opacity-30 text-center">
+  <p>
+    <% const date = new Date() %>
+    &copy; Copyright <%- date.getFullYear() -%>  Long Tang - COMP229 Assignment 1
   </p>
 </div>
