--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -3,88 +3,68 @@
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body class="container">
+  <body class="container mx-auto">
     <header><%- include('../partials/header'); %></header>
 
-    <main>
-      <div class="">
-        <h1>Contact</h1>
-
-        <section class="mb-4">
-          <h2 class="h1-responsive font-weight-bold text-center my-4">
-            Contact
-          </h2>
-
-          <p class="text-center w-responsive mx-auto mb-5">
-            Contact me if you have any questions!
-          </p>
-
-          <div class="row">
-            <div class="col-md-12 mb-md-0 mb-5">
-              <form id="contact-form" name="contact-form" method="POST">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="md-form mb-0">
-                      <input
-                        type="text"
-                        id="name"
-                        name="name"
-                        class="form-control"
-                      />
-                      <label for="name">Your name</label>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="md-form mb-0">
-                      <input
-                        type="text"
-                        id="email"
-                        name="email"
-                        class="form-control"
-                      />
-                      <label for="email" class="">Your email</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="md-form mb-0">
-                      <input
-                        type="text"
-                        id="subject"
-                        name="subject"
-                        class="form-control"
-                      />
-                      <label for="subject" class="">Subject</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="md-form">
-                      <textarea
-                        type="text"
-                        id="message"
-                        name="message"
-                        rows="2"
-                        class="form-control md-textarea"
-                      ></textarea>
-                      <label for="message">Your message</label>
-                    </div>
-                  </div>
-                </div>
-              </form>
-
-              <div class="text-center text-md-left">
-                <a class="btn btn-primary" href="/">Send</a>
-              </div>
-              <div class="status"></div>
-            </div>
-          </div>
-        </section>
+    <div
+      class="container rounded-lg mx-auto text-center font-Poppins p-8 content-center justify-around"
+      id="contact"
+    >
+      <div class="md:text-left pl-4 pt-6">
+        <p class="text-3xl pb-2">Contact Me</p>
+        <p>
+          Currently looking for part-time devs opportunities, contact me if you
+          have available position, thanks!
+        </p>
       </div>
-    </main>
+      <div>
+        <form action="/contact" method="post">
+          <div class="mb-6">
+            <label for="email" class="block mb-2 text-sm font-medium"
+              >Your email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 "
+              placeholder="abc@abc.com"
+              required
+            />
+          </div>
 
+          <label for="message" class="block mb-2 text-sm font-medium"
+            >Your message</label
+          >
+          <textarea
+            id="message"
+            name="message"
+            rows="4"
+            class="block p-2.5 w-full text-sm rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:border-gray-600"
+            placeholder="Leave a comment..."
+          ></textarea>
+          <div class="pt-4">
+
+            <button
+              formaction="/form"
+              type="submit"
+              class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+            >
+              Submit
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="text-black p-2 pb-8 md:text-right">
+        <p class="pt-4">Email address</p>
+        <p class="pb-4">edmundtl.work@gmail.com</p>
+        <a
+          href="mailto:edmundtl.work@gmail.com"
+          class="text-black hover:bg-sky-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+        >
+          Send email
+        </a>
+      </div>
+    </div>
     <footer><%- include('../partials/footer'); %></footer>
   </body>
 </html>
