--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -3,54 +3,9 @@
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body class="container mx-auto">
+  <body class="container mx-auto text-center">
     <header><%- include('../partials/header'); %></header>
-
-    <main>
-      <div class="text-center container-fluid">
-        <h1>Services</h1>
-        <p class="fs-4">
-          If you need a personal website, or e-commerce website, you can contact
-          me for more details
-        </p>
-
-        <div class="d-flex justify-content-center gap-5">
-          <div class="">
-            <!-- Data Analysis -->
-            <h3>Backend</h3>
-            <ul class="list-group">
-              <li class="list-group-item">Express.JS</li>
-              <li class="list-group-item">Node.JS</li>
-              <li class="list-group-item">MongoDB</li>
-              <li class="list-group-item">PostgreSQL</li>
-              <li class="list-group-item">C#</li>
-              <li class="list-group-item">Web Scrapping</li>
-            </ul>
-          </div>
-          <!-- Front-end -->
-          <div>
-            <h3>Frontend</h3>
-            <ul class="list-group">
-              <li class="list-group-item">React.JS</li>
-              <li class="list-group-item">Angular.JS</li>
-              <li class="list-group-item">Tailwind CSS</li>
-              <li class="list-group-item">Bootstrap 5</li>
-            </ul>
-          </div>
-          <!-- Data -->
-          <div>
-            <h3>Data Analysis</h3>
-            <ul class="list-group">
-              <li class="list-group-item">Selenium</li>
-              <li class="list-group-item">Pandas</li>
-              <li class="list-group-item">Matplotlib</li>
-              <li class="list-group-item">Seaborn</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </main>
-
+      <p class="text-4xl text-bold py-4">Services</p>
     <footer><%- include('../partials/footer'); %></footer>
   </body>
 </html>
