--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,7 @@
+<!-- Created On 1 October 2022
+COMP229 Assignment 1
+Student Name: LONG TANG
+SID: 301225866 -->
 <div class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 backdrop-filter bg-opacity-30 text-center">
   <p>
     <% const date = new Date() %>
