--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,17 @@
+<!-- Created On 1 October 2022
+COMP229 Assignment 1
+Student Name: LONG TANG
+SID: 301225866 -->
+
+<!-- Navigation Bar -->
 <nav
   class="sticky top-0 z-50 bg-white border-gray-200 rounded-md px-2 sm:px-4 py-2.5 backdrop-filter backdrop-blur-lg bg-opacity-30"
 >
   <div class="container flex flex-wrap justify-between items-center mx-auto">
+    <!-- Logo -->
     <a href="/"><i class="fa-solid fa-code text-2xl"></i></a>
     <div class="hidden w-full md:block md:w-auto" id="mobile-menu">
+      <!-- Menu -->
       <ul
         class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium text-black"
       >
