--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+/* Created On 1 October 2022
+COMP229 Assignment 1
+Student Name: LONG TANG
+SID: 301225866 */
 body {
     background: linear-gradient(90deg, #2167f4 0%, #c2d4f3 100%);
 }
