--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,3 +1,7 @@
+<!-- Created On 1 October 2022
+COMP229 Assignment 1
+Student Name: LONG TANG
+SID: 301225866 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
