--- a/views/pages/project.ejs
+++ b/views/pages/project.ejs
@@ -1,3 +1,7 @@
+<!-- Created On 1 October 2022
+COMP229 Assignment 1
+Student Name: LONG TANG
+SID: 301225866 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,14 +29,14 @@
             This is my first full stack web application. The reason why I made it is because originally I want to make a stock monitoring APP,
             But I found out stock index API are really expensive and I need some mock financial Data to test my app.
           </p>
-          <div class="flex">
+          <div class="lg:flex ">
             <!-- Github Repo Button -->
             <div class="text-center w-full mt-4 p-4">
               <a
               href="https://github.com/EdmundLT/fake-financial-data-io"
               class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
               >
-              Github Repo
+              Github
             </a>
           </div>
           <!-- Live Demo Button -->
@@ -41,7 +45,7 @@
             href="http://ffd-api.click/"
             class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
             >
-            Live Demo
+            Live
           </a>
         </div>
           </div>
@@ -65,7 +69,7 @@
           href="https://github.com/EdmundLT/next-stocker"
           class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
           >
-          Github Repo
+          Github
         </a>
       </div>
       <!-- Live Demo Button -->
@@ -74,7 +78,7 @@
         href="https://stocker-io.vercel.app/"
         class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
         >
-        Live Demo
+        Live
       </a>
     </div>
       </div>
@@ -107,7 +111,7 @@
       href="https://github.com/EdmundLT/EdmundLT.github.io/tree/master"
       class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
       >
-      Github Repo
+      Github
     </a>
   </div>
   <!-- Live Demo Button -->
@@ -116,7 +120,7 @@
     href="https://edmundlt.tech"
     class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
     >
-    Live Demo
+    Live
   </a>
 </div>
   </div>
