--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,7 @@
+<!-- Created On 1 October 2022
+COMP229 Assignment 1
+Student Name: LONG TANG
+SID: 301225866 -->
 <meta charset="UTF-8" />
 <title>Edmund Tang</title>
 
