--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -22,8 +22,8 @@ SID: 301225866 -->
         />
       <!-- Introduction -->
         <div class="m-10 text-center text-black md:w-1/2">
-          <p class="text-3xl pb-4 font-Poppins">About me</p>
-          <p class="lead text-lg font-Poppins leading-7">
+          <p class="text-3xl pb-4">About me</p>
+          <p class="lead text-lg leading-7">
           My name is Long Tang. I am a student of Centennial College in Toronto,
           CA with a Diploma of Software Engineering. I'm passionate to learn
           everything related to tech and on my way to become a backEnd software
@@ -35,7 +35,7 @@ SID: 301225866 -->
         <div class="text-center w-full mt-4 p-4">
           <a
           href="resume.pdf"
-          class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+          class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
           >
           Resume
         </a>
