--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -11,7 +11,7 @@ SID: 301225866 -->
     <header><%- include('../partials/header'); %></header>
 
     <div
-      class="container rounded-lg mx-auto text-center font-Poppins p-8 content-center justify-around"
+      class="container rounded-lg mx-auto text-center p-8 content-center justify-around"
       id="contact"
     >
       <div class="md:text-left pl-4 pt-6">
@@ -51,7 +51,7 @@ SID: 301225866 -->
             <button
               formaction="/form"
               type="submit"
-              class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+              class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
             >
               Submit
             </button>
@@ -63,7 +63,7 @@ SID: 301225866 -->
         <p class="pb-4">edmundtl.work@gmail.com</p>
         <a
           href="mailto:edmundtl.work@gmail.com"
-          class="text-black hover:bg-sky-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+          class="text-black hover:bg-sky-500 border-solid border-2 border-black py-2 px-4 rounded"
         >
           Send email
         </a>
