--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,28 +15,28 @@
       </div>
       <ul class="flex gap-6 justify-center p-4 text-5xl">
         <li>
-          <a class="" href="https://github.com/EdmundLT">
-            <i class="hover:bg-green-500 fa-brands fa-github"></i>
+          <a href="https://github.com/EdmundLT">
+            <i class="fa-brands fa-github"></i>
           </a>
         </li>
         <li>
-          <a class="" href="https://www.linkedin.com/in/longtang21/">
-            <i class="hover:bg-green-500 fa-brands fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/longtang21/">
+            <i class="fa-brands fa-linkedin"></i>
           </a>
         </li>
         <li>
-          <a class="" href="https://twitter.com/EdmundTL0921">
-            <i class="hover:bg-green-500 fa-brands fa-twitter"></i>
+          <a href="https://twitter.com/EdmundTL0921">
+            <i class="fa-brands fa-twitter"></i>
           </a>
         </li>
         <li>
-          <a class="" href="https://www.instagram.com/edmund_tangca/">
-            <i class="hover:bg-green-500 fa-brands fa-instagram"></i>
+          <a href="https://www.instagram.com/edmund_tangca/">
+            <i class="fa-brands fa-instagram"></i>
           </a>
         </li>
         <li>
-          <a class="" href="https://edmundlt.tech/youtube">
-            <i class="hover:bg-green-500 fa-brands fa-youtube"></i>
+          <a href="https://edmundlt.tech/youtube">
+            <i class="fa-brands fa-youtube"></i>
           </a>
         </li>
       </ul>
