--- a/views/pages/project.ejs
+++ b/views/pages/project.ejs
@@ -21,11 +21,11 @@ SID: 301225866 -->
             width="550"
           />
           <div class="m-10 text-center text-black md:w-1/2">
-            <p class="text-3xl pb-4 font-Poppins">Fake Financial Data</p>
-            <p class="lead text-lg font-Poppins leading-7">
+            <p class="text-3xl pb-4">Fake Financial Data</p>
+            <p class="lead text-lg leading-7">
               Free API builds for testing and data analysis practice. Stacks: React, Express, PostgreSQL, API, Jest (Unit Test). Project and Server deploy on AWS EC2 and RDS.
           </p>
-          <p class="lead text-lg font-Poppins leading-7">
+          <p class="lead text-lg leading-7">
             This is my first full stack web application. The reason why I made it is because originally I want to make a stock monitoring APP,
             But I found out stock index API are really expensive and I need some mock financial Data to test my app.
           </p>
@@ -34,7 +34,7 @@ SID: 301225866 -->
             <div class="text-center w-full mt-4 p-4">
               <a
               href="https://github.com/EdmundLT/fake-financial-data-io"
-              class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+              class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
               >
               Github
             </a>
@@ -43,7 +43,7 @@ SID: 301225866 -->
           <div class="text-center w-full mt-4 p-4">
             <a
             href="http://ffd-api.click/"
-            class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+            class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
             >
             Live
           </a>
@@ -55,11 +55,11 @@ SID: 301225866 -->
     <!-- Stocker.io -->
     <div class="container mx-auto p-8 pb-10 text-black md:flex rounded-lg">
       <div class="m-10 text-center text-black md:w-1/2">
-        <p class="text-3xl pb-4 font-Poppins">Stocker.io</p>
-        <p class="lead text-lg font-Poppins leading-7">
+        <p class="text-3xl pb-4">Stocker.io</p>
+        <p class="lead text-lg leading-7">
           Fullstack Stock watching web application project with Next.JS, APIs, SSR, Firebase, Tailwind CSS, Google Authentication
       </p>
-      <p class="lead text-lg font-Poppins leading-7">
+      <p class="lead text-lg leading-7">
         As I said above, after I finished my Fake Financial Data API, I can use the API on this project.
       </p>
       <div class="flex">
@@ -67,7 +67,7 @@ SID: 301225866 -->
         <div class="text-center w-full mt-4 p-4">
           <a
           href="https://github.com/EdmundLT/next-stocker"
-          class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+          class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
           >
           Github
         </a>
@@ -76,7 +76,7 @@ SID: 301225866 -->
       <div class="text-center w-full mt-4 p-4">
         <a
         href="https://stocker-io.vercel.app/"
-        class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+        class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
         >
         Live
       </a>
@@ -100,8 +100,8 @@ SID: 301225866 -->
     width="550"
   />
   <div class="m-10 text-center text-black md:w-1/2">
-    <p class="text-3xl pb-4 font-Poppins">My portfolio</p>
-    <p class="lead text-lg font-Poppins leading-7">
+    <p class="text-3xl pb-4">My portfolio</p>
+    <p class="lead text-lg leading-7">
       This is my personal website built in React, Tailwind CSS, Material UI.
   </p>
   <div class="flex">
@@ -109,7 +109,7 @@ SID: 301225866 -->
     <div class="text-center w-full mt-4 p-4">
       <a
       href="https://github.com/EdmundLT/EdmundLT.github.io/tree/master"
-      class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+      class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
       >
       Github
     </a>
@@ -118,7 +118,7 @@ SID: 301225866 -->
   <div class="text-center w-full mt-4 p-4">
     <a
     href="https://edmundlt.tech"
-    class="text-black hover:bg-green-500 border-solid border-2 border-black font-Poppins py-2 px-4 rounded"
+    class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
     >
     Live
   </a>
