--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -52,6 +52,7 @@ SID: 301225866 -->
               formaction="/form"
               type="submit"
               class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
+              onclick="()=>{alert(asb)}"
             >
               Submit
             </button>
