--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -24,6 +24,18 @@ SID: 301225866 -->
       <div>
         <form action="/contact" method="post">
           <div class="mb-6">
+            <label for="name" class="block mb-2 text-sm font-medium"
+              >Your Name</label>
+            <input
+              type="name"
+              id="name"
+              name="name"
+              class="border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 "
+              placeholder="Peter Chan"
+              required
+            />
+          </div>
+          <div class="mb-6">
             <label for="email" class="block mb-2 text-sm font-medium"
               >Your email</label>
             <input
