--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -27,7 +27,7 @@ SID: 301225866 -->
             <label for="name" class="block mb-2 text-sm font-medium"
               >Your Name</label>
             <input
-              type="name"
+              type="text"
               id="name"
               name="name"
               class="border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 "
@@ -64,7 +64,6 @@ SID: 301225866 -->
               formaction="/form"
               type="submit"
               class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
-              onclick="()=>{alert(asb)}"
             >
               Submit
             </button>
