--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,6 +30,12 @@ SID: 301225866 -->
         <li>
           <a href="/contact" class="hover:text-green-800"> Contact </a>
         </li>
+        <li>
+          <a href="/login" class="hover:text-green-800">Login</a>
+        </li>
+        <li>
+          <a href="/register" class="hover:text-green-800">Register</a>
+        </li>
       </ul>
     </div>
   </div>
