--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -8,7 +8,7 @@
 
     <div class="container mx-auto text-center md:p-20 m-20">
       <p class="text-4xl">Register</p>
-      <p class="text-red-700 text-lg font-semibold"><%- caution -%> </p>
+      <p class="text-red-700 text-lg font-semibold"><%- caution -%></p>
       <div class="w-1/3 mx-auto pt-4">
         <form action="/register" method="post">
           <div class="mb-4">
@@ -19,6 +19,18 @@
               type="username"
               id="username"
               name="username"
+              class="border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600"
+              required
+            />
+          </div>
+          <div class="mb-4">
+            <label for="email" class="block mb-2 text-sm font-medium"
+              >Email</label
+            >
+            <input
+              type="email"
+              id="email"
+              name="email"
               class="border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600"
               required
             />
