--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,9 +15,10 @@ SID: 301225866 -->
       <ul
         class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium text-black"
       >
-      <li>
-        <a href="/" class="hover:text-green-800"> Home </a>
-      </li>
+        <li>
+          <a href="/" class="hover:text-green-800"> Home </a>
+        </li>
+
         <li>
           <a href="/about" class="hover:text-green-800"> About </a>
         </li>
@@ -30,12 +31,19 @@ SID: 301225866 -->
         <li>
           <a href="/contact" class="hover:text-green-800"> Contact </a>
         </li>
+
+        <% if (!token) { %>
         <li>
           <a href="/login" class="hover:text-green-800">Login</a>
         </li>
         <li>
           <a href="/register" class="hover:text-green-800">Register</a>
         </li>
+        <% } %> <% if (token) { %>
+        <li>
+          <a href="/bcontact" class="hover:text-green-800"> Business Contacts </a>
+        </li>
+        <% } %>
       </ul>
     </div>
   </div>
