--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,6 +43,9 @@ SID: 301225866 -->
         <li>
           <a href="/bcontact" class="hover:text-green-800"> Business Contacts </a>
         </li>
+        <li>
+          <a href="/logout" class="hover:text-green-800"> Logout </a>
+        </li>
         <% } %>
       </ul>
     </div>
