--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -10,7 +10,7 @@
       <p class="text-4xl">Register</p>
       <p class="text-red-700 text-lg font-semibold"><%- caution -%></p>
       <div class="w-1/3 mx-auto pt-4">
-        <form action="/register" method="post">
+        <form action="/user/register" method="post">
           <div class="mb-4">
             <label for="username" class="block mb-2 text-sm font-medium"
               >Username</label
@@ -61,7 +61,7 @@
           </div>
           <div class="pt-4">
             <button
-              formaction="/register"
+              formaction="/user/register"
               type="submit"
               class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
             >
