--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,17 +34,17 @@ SID: 301225866 -->
 
         <% if (!token) { %>
         <li>
-          <a href="/login" class="hover:text-green-800">Login</a>
+          <a href="/user/login" class="hover:text-green-800">Login</a>
         </li>
         <li>
-          <a href="/register" class="hover:text-green-800">Register</a>
+          <a href="/user/register" class="hover:text-green-800">Register</a>
         </li>
         <% } %> <% if (token) { %>
         <li>
           <a href="/bcontact" class="hover:text-green-800"> Business Contacts </a>
         </li>
         <li>
-          <a href="/logout" class="hover:text-green-800"> Logout </a>
+          <a href="/user/logout" class="hover:text-green-800"> Logout </a>
         </li>
         <% } %>
       </ul>
