--- a/views/pages/update.ejs
+++ b/views/pages/update.ejs
@@ -52,7 +52,7 @@ SID: 301225866 -->
           </div>
           <div>
             <button
-              formaction="/editcontact"
+              formaction="/bcontact/editcontact"
               type="submit"
               class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
             >
@@ -66,7 +66,7 @@ SID: 301225866 -->
               type="button"
               class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
             >
-              <a href="/bcontact">Cancel Editing...</a>
+              <a href="/bcontact/home">Cancel Editing...</a>
             </button>
           </div>
       </div>
