--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,7 @@ SID: 301225866 -->
         </li>
         <% } %> <% if (token) { %>
         <li>
-          <a href="/bcontact" class="hover:text-green-800"> Business Contacts </a>
+          <a href="/bcontact/home" class="hover:text-green-800"> Business Contacts </a>
         </li>
         <li>
           <a href="/user/logout" class="hover:text-green-800"> Logout </a>
