--- a/views/pages/bcontact.ejs
+++ b/views/pages/bcontact.ejs
@@ -84,7 +84,7 @@ SID: 301225866 -->
           </div>
           <div>
             <button
-              formaction="/addcontact"
+              formaction="/bcontact/addcontact"
               type="submit"
               class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
             >
