--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -8,17 +8,20 @@
 
     <div class="container mx-auto text-center md:p-20 m-20">
       <p class="text-4xl">Login</p>
-      <p class="text-red-700 text-lg font-semibold"><%- caution -%> </p>
+      <% if (messages.error) { %>
+      <p class="text-2xl text-red-600"><%= messages.error %></p>
+      <% } %>
+      <p class="text-red-700 text-lg font-semibold"><%- caution -%></p>
       <div class="w-1/3 mx-auto pt-4">
-        <form action="/user/auth" method="post">
+        <form action="/user/login" method="post">
           <div class="mb-4">
-            <label for="username" class="block mb-2 text-sm font-medium"
-              >Username</label
+            <label for="email" class="block mb-2 text-sm font-medium"
+              >email</label
             >
             <input
-              type="username"
-              id="username"
-              name="username"
+              type="email"
+              id="email"
+              name="email"
               class="border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600"
               required
             />
@@ -37,7 +40,7 @@
           </div>
           <div class="pt-4">
             <button
-              formaction="/user/auth"
+              formaction="/user/login"
               type="submit"
               class="text-black hover:bg-green-500 border-solid border-2 border-black py-2 px-4 rounded"
             >
