--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,20 +31,24 @@ SID: 301225866 -->
         <li>
           <a href="/contact" class="hover:text-green-800"> Contact </a>
         </li>
-
-        <% if (!token) { %>
+        <% if (!user) { %>
         <li>
           <a href="/user/login" class="hover:text-green-800">Login</a>
         </li>
         <li>
           <a href="/user/register" class="hover:text-green-800">Register</a>
         </li>
-        <% } %> <% if (token) { %>
+
+        <% } %> <% if (user) { %>
         <li>
-          <a href="/bcontact/home" class="hover:text-green-800"> Business Contacts </a>
+          <a href="/bcontact/home" class="hover:text-green-800">
+            Business Contacts
+          </a>
         </li>
         <li>
-          <a href="/user/logout" class="hover:text-green-800"> Logout </a>
+          <form action="/user/logout" method="POST">
+            <button class="hover:text-green-800" type="submit">Log Out</button>
+          </form>
         </li>
         <% } %>
       </ul>
